# ganglia-mod_ibmpower

./: README.md  configure.ac
gmond/: Makefile.am
gmond/modules/: Makefile.am
gmond/modules/conf.d/: ibmpower.conf
gmond/modules/ibmpower/: Makefile.am  mod_ibmpower-aix.c  mod_ibmpower-linux.c
